--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ body {
   margin-top: 18px;
   margin-bottom: 5px;
 }
-.login-part input {
+.login-part input, 
+#repeat-pass{
   width: 100%;
   height: 42px;
   margin-top: 10px;
@@ -151,7 +152,7 @@ input::placeholder {
   justify-content: center;
   align-items: center;
   font-size: 10px;
-  margin-top: 80px;
+  margin-top: 70px;
 }
 .footer a {
   color: #232323;
