--- a/style.css
+++ b/style.css
@@ -16,9 +16,38 @@ body {
 }
 .img-part {
   width: 50%;
+  margin: 0 auto;
+  position: relative;
 }
 .img-part img {
   width: 90%;
+  margin: 0 auto;
+
+}
+.box-blur {
+  display: none;
+  position: absolute;
+  width: 55%;
+  height: 60%;
+  top: 20%;
+  left: 20%;
+  backdrop-filter: blur(5px);
+  background-color: rgb(0,0, 0,0.5);
+}
+.box-blur::before ,.box-blur::after{
+content: '';
+position: absolute;
+width: 30%;
+height: 2px;
+background: #FFF;
+}
+.box-blur::before{
+  top:15%;
+  left: 15%;
+}
+.box-blur::after{
+  bottom: 15%;
+  right: 15%;
 }
 .login-part {
   display: flex;
@@ -33,16 +62,16 @@ body {
   margin-top: 18px;
   margin-bottom: 5px;
 }
-.login-part input, 
-#repeat-pass{
+.login-part input,
+#repeat-pass {
   width: 100%;
   height: 42px;
   margin-top: 10px;
   border-radius: 5px;
   border: 1px solid #d3d3d3;
-  
 }
-.validation{
+
+.validation {
   border: 1px solid crimson !important;
 }
 input::placeholder {
@@ -52,7 +81,7 @@ input::placeholder {
 .inp-validation-email,
 .inp-validation-pass,
 .inp-validation-name,
-.inp-validation-repeat-pass{
+.inp-validation-repeat-pass {
   font-size: 12px;
   display: block;
   margin: 2px 0;
@@ -76,7 +105,7 @@ input::placeholder {
 .input-icon-person svg {
   position: absolute;
 }
-.icon-person{
+.icon-person {
   bottom: 25%;
   left: 13px;
 }
@@ -166,23 +195,22 @@ input::placeholder {
   border-radius: 100%;
   margin: 0 3px;
 }
-.login-addres{
+.login-addres {
   text-decoration: none;
-  color: #4FC3F7;
+  color: #4fc3f7;
   cursor: pointer;
 }
-.circle-login{
+.circle-login {
   width: 4px;
   height: 4px;
-  background-color: #4FC3F7;
+  background-color: #4fc3f7;
   border-radius: 100%;
   margin-left: 2px;
 }
-.create{ 
+.create {
   cursor: pointer;
 }
-.already-part{
-
+.already-part {
   margin-top: 25px;
   display: flex;
   justify-content: center;
@@ -202,7 +230,7 @@ input::placeholder {
   .footer {
     margin-top: 50px;
   }
-  .already-part{
+  .already-part {
     font-size: 10px;
   }
 }
@@ -273,28 +301,28 @@ input::placeholder {
   .others {
     margin-bottom: 10px;
   }
-  .hide-password{
-bottom: 45%;
+  .hide-password {
+    bottom: 45%;
   }
-.show-password{
-  bottom: 45%;
-}
-.icon-person{
-  bottom: 45%;
-  left: 5px;
-}
-.already-part{
-  margin-top: 15px;
-  font-size: 9px;
-}
-.footer {
-  margin-top: 20px;
-  font-size: 8px;
-}
-.circle {
-  width: 5px;
-  height: 5px;
-}
+  .show-password {
+    bottom: 45%;
+  }
+  .icon-person {
+    bottom: 45%;
+    left: 5px;
+  }
+  .already-part {
+    margin-top: 15px;
+    font-size: 9px;
+  }
+  .footer {
+    margin-top: 20px;
+    font-size: 8px;
+  }
+  .circle {
+    width: 5px;
+    height: 5px;
+  }
 }
 @media (max-width: 700px) {
   .img-part img {
@@ -306,7 +334,7 @@ bottom: 45%;
   }
   .wallet-svg {
     top: 44%;
-    left:25%;
+    left: 25%;
   }
 }
 @media (max-width: 530px) {
