--- a/style.css
+++ b/style.css
@@ -63,7 +63,8 @@ background: #FFF;
   margin-bottom: 5px;
 }
 .login-part input,
-#repeat-pass {
+.border-input
+{
   width: 100%;
   height: 42px;
   margin-top: 10px;
